# Podletters

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
deploy/systemd/: README.md  podletters-api.service  podletters-worker.service
plans/: code-review-2026-04-24.md  podletters-plan.md
refs/: README.md
scripts/: bootstrap_voices.sh  eval_prompt.py  run_pipeline.py
src/podletters/: celery_app.py  config.py  logging_config.py  models.py  tasks.py
src/podletters/ingestion/: dedup.py  imap_client.py  smoke.py  text_cleaner.py
src/podletters/llm/: ollama_client.py  parser.py  prompt.py  smoke.py
src/podletters/postprocessing/: normalize.py
src/podletters/storage/: episode_counter.py  minio_client.py
src/podletters/streaming/: api.py  rss_generator.py
src/podletters/tts/: audio_merger.py  f5tts_renderer.py  smoke.py
tests/fixtures/prompt_eval/: sample_tldr.txt
tests/integration/: test_pipeline.py
tests/unit/: test_audio_merger.py  test_config.py  test_dedup.py  test_episode_counter.py  test_f5tts_renderer.py  test_imap_client.py  test_models.py  test_normalize.py  test_ollama_client.py  test_parser.py  test_prompt.py  test_rss_generator.py  test_text_cleaner.py
