[project]
name = "podletters"
version = "0.1.0"
description = "Local newsletter-to-podcast pipeline (German two-host TTS)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "imap-tools>=1.6",
    "trafilatura>=1.9",
    "html2text>=2024.2.26",
    "httpx>=0.27",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "boto3>=1.34",
    "numpy>=1.26",
    "soundfile>=0.12",
    "pyloudnorm>=0.1.1",
    "pydub>=0.25",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "feedgen>=1.0",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
